...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello!" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MUS-JB-pb8">
                                <rect key="frame" x="20" y="69" width="68" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="greetingLabel"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="25"/>
                                <nil key="textColor"/>
...
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="N/A" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WTg-oe-quM">
                                                <rect key="frame" x="10" y="230" width="45" height="30"/>
                                                <accessibility key="accessibilityConfiguration" identifier="titleLabel"/>
                                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="25"/>
                                                <nil key="textColor"/>
...
                                                        <rect key="frame" x="0.0" y="0.0" width="354" height="35"/>
                                                        <color key="backgroundColor" systemColor="linkColor"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="makeABookingButton"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="35" id="ie3-Ms-0cn"/>
...
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a date to book" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="My9-31-f7S">
                                                        <rect key="frame" x="0.0" y="36" width="374" height="34"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="dateTextField"/>
                                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                                        <textInputTraits key="textInputTraits" returnKeyType="next"/>
...
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a time to book" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vFW-aW-8fS">
                                                        <rect key="frame" x="0.0" y="36" width="374" height="34"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="timeTextField"/>
                                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                                        <textInputTraits key="textInputTraits" returnKeyType="next"/>
...
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a duration of your stay" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="srI-yB-JU7">
                                                        <rect key="frame" x="0.0" y="36" width="374" height="34"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="durationTextField"/>
                                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                                        <textInputTraits key="textInputTraits" keyboardType="numberPad" returnKeyType="next"/>
...
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter number of people" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EcZ-eY-qPR">
                                                        <rect key="frame" x="0.0" y="36" width="374" height="34"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="headCountTextField"/>
                                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                                        <textInputTraits key="textInputTraits" keyboardType="numberPad" returnKeyType="done"/>
...
                                                <rect key="frame" x="152" y="501" width="110" height="35"/>
                                                <color key="backgroundColor" systemColor="linkColor"/>
                                                <accessibility key="accessibilityConfiguration" identifier="submitButton"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="35" id="I8t-k3-VmQ"/>
...
