...
    static let id = "AlertVC"
    private var onLeftButtonClick: (() -> ())?
    private var onRightButtonClick: (() -> ())?
    
    // MARK: - Outlets
    @IBOutlet var alertView: UIView!
    @IBOutlet var alertTitleLabel: UILabel!
    @IBOutlet var alertMessageLabel: UILabel!
    @IBOutlet weak var leftButton: UIButton!
    @IBOutlet weak var rightButton: UIButton!
    
    // MARK: Life cycle
    override func viewDidLoad() {
...
